# getting-started-with-python

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml
advanced_example/: args_kwars_example.py  class_function_example.py  class_object.py  context_manager_01.py  context_manager_02.py  dataclass_example.py
api_example/: curl_example.sh  http_example.py  json_example.py  naver_open_api.py  simple_server_example.py  students.json  wep_api.py
basic_example/: chap01_variable_type.py  chap01_변수와자료형.py  chap02_조건문과 반복문.py  chap03_함수.py  chap04_클래스와 객체지향.py  chap05_모듈과 패키지.py  chap06_파일입출력.py  chap07_내장 함수와 표준 라이브러리.py  chap08_예외처리.py  chap09_테스트.py  chap10_고급자료구조.py  chap11_비동기_simple.py  chap11_비동기프로그래밍.py  chap12_제너레이터와이터레이터.py  keywords.py  math_utils.py  string_encoding.py
my_package/: calculator.py  use_calculator.py
