[project]
name = "getting-started-with-python"
version = "0.1.0"
description = "getting started with python"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black>=25.1.0",
    "fastapi>=0.116.1",
    "flake8>=7.3.0",
    "jinja2>=3.1.6",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "uvicorn>=0.35.0",
    "requests>=2.32.4,<3.0.0",
    "matplotlib (>=3.10.3,<4.0.0)",
    "loguru>=0.7.3",
    "flask>=3.1.1",
]

[dependency-groups]
dev = [
    "ruff>=0.12.3",
]
